@@ -22,7 +22,8 @@ ios:
 	cd "${LEVELDB_PATH}"; make clean; CXXFLAGS=-stdlib=libc++ ${MAKE} PLATFORM=IOS
 	cd "${SNAPPY_PATH}"; make clean; make -f Makefile-ios
 	mkdir -p ios
-	mv ${LEVELDB_PATH}/libleveldb-ios.a ${SNAPPY_PATH}/libsnappy-ios.a ios/
+	mv ${LEVELDB_PATH}/out-ios-universal/libleveldb.a ios/libleveldb-ios.a
+	mv ${SNAPPY_PATH}/libsnappy-ios.a ios/
 	cd src/util; make clean; ${MAKE} -f Makefile-ios
 	cd src/ssdb; make clean; ${MAKE} -f Makefile-ios
 
